# overflying

./: .env.example  .gitignore  COST_OPTIMIZATION.md  LOCAL_DEV.md  Makefile  README.md  apphosting.production.yaml  apphosting.staging.yaml  codecov.yml  demo-nats.sh  render.yaml  requirements.txt  ruff.toml
.claude/: settings.local.json
.claude/scripts/: validate-bash.sh
.github/workflows/: ci.yml  deploy-api.yml  deploy-auth.yml.disabled  deploy-web.yml  deploy-worker.yml  reusable-build-push-python.yml  reusable-deploy-gke.yml  reusable-test-python.yml
analytics/: README.md
apps/api/: .coverage  .env.example  Dockerfile  __init__.py  docker-compose.test.yml  pyproject.toml
apps/api/src/: __init__.py  config.py  database.py  main.py  metrics.py  models.py  nats_client.py  run.py  schemas.py
apps/api/tests/: __init__.py  conftest.py  test_jobs.py
apps/auth/: .env.example  deno.json  test-auth.sh
apps/auth/src/: main.ts
apps/auth/src/helpers/: authHelpers.ts  bcryptHelpers.ts  dbHelpers.test.ts  dbHelpers.ts
apps/auth/src/middleware/: corsMiddleware.ts  rateLimitMiddleware.ts
apps/globe/: .gitignore  BUNDE_LOGS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  RESIUM_GLOBE_GUIDE.md  next.config.ts  package.json
apps/globe/src/app/: layout.tsx  page.tsx
apps/globe/src/components/: Globe.tsx
apps/globe/src/components/ResiumGlobe/: ARCHITECTURE.md  README.md  index.tsx  types.ts
apps/globe/src/components/ResiumGlobe/components/: RectangleCursor.tsx
apps/globe/src/components/ResiumGlobe/hooks/: useAreaSelection.ts  useKeyboardControls.ts  useResiumViewer.ts
apps/globe/src/components/ResiumGlobe/utils/: calculations.ts  constants.ts
apps/usage-go/: README.md
apps/web/: .env.example  .firebaserc  .gitignore  FIREBASE_APP_HOSTING_SETUP.md  README.md  TESTING.md  apphosting.production.yaml  apphosting.staging.yaml  eslint.config.js  firebase.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/scripts/: copy-shared-types.js
apps/web/src/app/: api.ts  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/admin/: page.tsx
apps/web/src/app/(dashboard)/jobs/: page.tsx
apps/web/src/app/(dashboard)/jobs/[id]/: page.tsx
apps/web/src/app/(public)/: layout.tsx
apps/web/src/app/(public)/login/: page.tsx
apps/web/src/app/__tests__/: api.test.ts
apps/web/src/app/admin/: page.tsx
apps/web/src/components/: AppSidebar.tsx  DeleteConfirmDialog.tsx  JobDialog.tsx  JobForm.tsx  SplineScene.tsx
apps/web/src/components/__tests__/: DeleteConfirmDialog.test.tsx  JobDialog.test.tsx  JobForm.test.tsx
apps/web/src/lib/: api.ts  authApi.ts  authenticatedFetch.ts
apps/web/src/lib/__tests__/: api.test.ts  authenticatedFetch.test.ts
apps/web/src/providers/: auth.tsx  emotion.tsx  query.tsx
apps/web/src/store/: authStore.ts
apps/web/tests/e2e/: job-crud.spec.ts  job-validation.spec.ts
apps/worker/: .coverage  .env.example  Dockerfile  README.md  docker-compose.test.yml  pyproject.toml
apps/worker/src/: config.py  database.py  executor.py  gpu_manager.py  main.py  metrics.py  nats_client.py
apps/worker/tests/: conftest.py  test_config.py  test_database.py
db/: .env.example  README.md  alembic.ini  alembic.local.ini
db/migrations/: .gitkeep  20251013_115304_create_jobs_table.py  env.py  script.py.mako
db/migrations/versions/: 20251013_115304_create_jobs_table.py  20251013_130302_seed_sample_job.py  20251020_150005_add_user_column.py  20251020_150005_empty_migration_file.py  20251103_112058_create_users_table.py  20251103_133844_seed_default_users.py
docs/: 001_OVERVIEW.md  002_GETTING_STARTED.md  003_ARCHITECTURE.md  004_DEVELOPMENT.md  005_DEPLOYMENT.md  006_ROADMAP.md  007_PLANET_JOB_DESCRIPTION.md  008_NATS_INTEGRATION.md  CRUD.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  DOMAIN_QUICK_START.md  FIX_DOCKER_COMPOSE_TEST.md  JOB_DESCRIPTION.md  LOCAL_DEV.md  NEXT_STEPS.md  OBSERVABILITY_DEPLOYMENT.md  OBSERVABILITY_INGRESS_SETUP.md  OPENAPI_WORKFLOW.md  QUICK_DEPLOY_REFERENCE.md  QUICK_START.md  SNIPPETS.md
docs/old/: CREDITS.md  CRUD.md  DEPLOYMENT_SETUP.md  PG.md  SETUP.md  SNIPPETS.md
docs/unorganized/: DB_MIGRATION_GUIDE.md  GCP_DISABLE_GKE.md  GCP_SETUP.md  GIT_CLEAN_HISTORY.md  NATS_QUICKSTART.md  OBSERVABILITY_INITIAL_CHAT.md  PLAN_A_IMPLEMENTATION_SUMMARY.md
infra/: README.md  docker-compose.yml
infra/docker-compose/: test-db.yml  test-nats.yml
k8s/api/: README.md  production-deployment.yaml  setup-secrets.sh  staging-deployment.yaml
k8s/infrastructure/: nats-deployment.yaml
k8s/ingress/: README.md  letsencrypt-issuer.yaml  production-ingress.yaml  setup-ingress.sh  staging-ingress.yaml
k8s/observability/: README.md  grafana-configmap.yaml  grafana-dashboards-detailed.yaml  grafana-dashboards.yaml  grafana-deployment.yaml  observability-ingress.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml
k8s/worker/: README.md  production-deployment.yaml  setup-secrets.sh  staging-deployment.yaml
openapi/: .redocly.yaml  openapi-diff.py  spec-generated.json  spec.yaml
scripts/: deploy-infrastructure.sh  deploy-observability.sh
