[project]
name = "overflying-api"
version = "0.1.0"
description = "FastAPI service for Constellation GPU orchestrator"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "faker>=33.0.0",
]

# Change from hatchling to poetry-core
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Add Poetry-specific package configuration
[tool.poetry]
name = "overflying-api"
version = "0.1.0"
description = "FastAPI service for Constellation GPU orchestrator"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]