[tool.poetry]
name = "overflying-api"
version = "0.1.0"
description = "FastAPI service for Overflying GPU orchestrator"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.120.1"
uvicorn = {extras = ["standard"], version = ">=0.38.0"}
sqlalchemy = ">=2.0.44"
psycopg2-binary = ">=2.9.11"
pydantic = ">=2.12.3"
pydantic-settings = ">=2.11.0"
nats-py = ">=2.11.0"
# OpenTelemetry and Prometheus
opentelemetry-api = ">=1.38.0"
opentelemetry-sdk = ">=1.38.0"
opentelemetry-instrumentation = ">=0.59b0"
opentelemetry-instrumentation-fastapi = ">=0.59b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.59b0"
opentelemetry-instrumentation-system-metrics = ">=0.59b0"
opentelemetry-exporter-prometheus = ">=0.59b0"
prometheus-client = ">=0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2"
httpx = ">=0.28.1"
ruff = ">=0.14.2"
pytest-asyncio = ">=1.2.0"
pytest-cov = ">=7.0.0"
faker = ">=37.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:nats.*",
    "ignore::UserWarning:fastapi.*",
    "ignore:.*Core Pydantic V1 functionality.*:UserWarning",
]