[project]
name = "constellation-worker"
version = "0.1.0"
description = "GPU job worker for Constellation"
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "nats-py>=2.9.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "constellation-worker"
version = "0.1.0"
description = "GPU job worker for Constellation"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]
