[tool.poetry]
name = "overflying-worker"
version = "0.1.0"
description = "GPU job worker for Overflying"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
psutil = ">=5.9.0"
nats-py = ">=2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
ruff = ">=0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--cov=src", "--cov-report=term-missing", "--cov-report=xml"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
]
